--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.11",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
@@ -16,8 +17,10 @@
   "devDependencies": {
     "@types/node": "^16.11.47",
     "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/compiler-sfc": "^3.0.5",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.54.4",
     "typescript": "~4.7.4",
     "vite": "^3.0.4",
     "vue-tsc": "^0.39.5"
